k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: https://github.com/upslopeio/express-sample-app
  labels:
    app: qing-xu-go-http-server
    app.kubernetes.io/instance: qing-xu-go-http-server
    app.kubernetes.io/name: qing-xu-go-http-server
  name: qing-xu-go-http-server
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: qing-xu-go-http-server
      app.kubernetes.io/name: qing-xu-go-http-server
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: qing-xu-go-http-server
        app.kubernetes.io/name: qing-xu-go-http-server
    spec:
      containers:
        - env:
            - name: CAL_METHOD
              value: delete
          image: image-registry.openshift-image-registry.svc:5000/qing-xu/go-multiply:aach
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 7777
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: qing-xu-go-http-server
          ports:
            - containerPort: 7777
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
